--- a/Views/SanPhams/Delete.cshtml
+++ b/Views/SanPhams/Delete.cshtml
@@ -5,31 +5,24 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa sản phẩm @Model.TenSP</h3>
 <div>
-    <h4>SanPham</h4>
+    <h4></h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TenSP)
+            
+        </dt>
+        <dd><img src="~/Images/@Html.DisplayFor(modelItem => Model.MaSP)/@Html.DisplayFor(modelItem => Model.AnhSP)" alt="Ảnh sản phẩm" width="200" height="200"></dd>
+        <dt>
+            Tên Sản Phẩm
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TenSP)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.AnhSP)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AnhSP)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MoTaSP)
+            Mô tả
         </dt>
 
         <dd>
@@ -37,7 +30,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DonGia)
+            Đơn Giá
         </dt>
 
         <dd>
@@ -45,7 +38,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LoaiSP.TenLSP)
+            Loại Sản Phẩm
         </dt>
 
         <dd>
@@ -53,7 +46,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NhaCungCap.TenNCC)
+           Nhà Cung Cấp
         </dt>
 
         <dd>
@@ -66,8 +59,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-danger" /> |
+            @Html.ActionLink("Quay lại", "IndexAdmin")
         </div>
     }
 </div>
